<resources>
    <string name="app_name">ImplicitIntentSample</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="fist_name">Fist name</string>
    <string name="country">Country</string>
    <string name="phone">Phone number</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="add">Add</string>
    <string name="phone_number">Phone Number</string>
    <string name="go">Go</string>
    <string name="call">Call</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="open_map">Open Map</string>
    <string name="add_your_text_here">Add Your Text Here</string>
    <string name="enter_url">Enter URL</string>
    <string name="go_to_website">Go to website</string>
    <string name="enter_package_id">Enter package name (com.example.app)</string>
    <string name="open_app">Open App</string>
    <string name="send_sms">Send SMS</string>
    <string name="add_contact">Add Contact</string>
    <string name="make_a_call">Make a call</string>
    <string name="browsing_site">Browsing Site</string>
    <string name="browsing_location">Browsing Location</string>
    <string name="launch_app">Launch App</string>

    <string name="take_photo">Take a picture</string>
    <string name="choose_gallery">Choose from gallery</string>
    <string name="choose_pic">Choose an image</string>
    <string name="cancel">Cancel</string>
</resources>