<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            app:cardBackgroundColor="@color/purple_700"
            app:cardCornerRadius="12dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/tvContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingVertical="35dp"
                android:text="@string/add_contact"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            app:cardBackgroundColor="@color/purple_200"
            app:cardCornerRadius="12dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/tvSendSms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingVertical="35dp"
                android:text="@string/send_sms"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            app:cardBackgroundColor="@color/purple_700"
            app:cardCornerRadius="12dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/tvCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingVertical="35dp"
                android:text="@string/make_a_call"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            app:cardBackgroundColor="@color/purple_200"
            app:cardCornerRadius="12dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/tvSite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingVertical="35dp"
                android:text="@string/browsing_site"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            app:cardBackgroundColor="@color/purple_700"
            app:cardCornerRadius="12dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingVertical="35dp"
                android:text="@string/browsing_location"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            app:cardBackgroundColor="@color/purple_200"
            app:cardCornerRadius="12dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/tvLaunchApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingVertical="35dp"
                android:text="@string/launch_app"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>


</ScrollView>